--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,7 @@
     "activityBar.background": "#3A2C04",
     "titleBar.activeBackground": "#523D05",
     "titleBar.activeForeground": "#FEFAED"
-  }
+  },
+  "search.useGlobalIgnoreFiles": false,
+  "search.useParentIgnoreFiles": false
 }
